--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css">
+    <!-- Importing Ionicons icons -->
     <title>React App</title>
   </head>
   <body>
