--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,12 @@
     -->
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css">
     <!-- Importing Ionicons icons -->
+
+    <!-- Add MDL -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
     <title>React App</title>
   </head>
   <body>
